# GitHub-User-Activity

./: CMakeLists.txt  README.md
src/: main.cpp
src/GithubUserActivity/: GithubUserActivity.cpp  GithubUserActivity.h
src/HTTPClient/: HTTPClient.cpp  HTTPClient.h
